Bug 1048091 - Support for multiple upload files in Breakpad. r=ted